tests/cases/semantics/directives/layout_of.stderr
error: the `layout_of` directive expects either `struct definition`, or `enum definition` as an argument
  --> $DIR/layout_of.hash:28:34
27 |    
28 |    ParameterisedValue := #layout_of <T> => struct (
   |  ___________________________________-
29 | |      x: T,
30 | |      y: T,
31 | |      z: T,
32 | |  );
   | |__- a `type function definition` cannot be given to the `layout_of` directive
33 |    
   = note: currently, the `#layout_of` directive does not handle function definitions. This is subject to change in the future.

error: the `layout_of` directive expects either `struct definition`, or `enum definition` as an argument
  --> $DIR/layout_of.hash:34:21
33 |   
34 |   other := #layout_of 5;
   |                       ^ a `literal` cannot be given to the `layout_of` directive
35 |   
